# comedouro-pipe

./: LICENSE  README.md
comedouro-gateway/: CMakeLists.txt  c_template.c  h_template.h  sdkconfig  sdkconfig.old
comedouro-gateway/components/app_nvs/: CMakeLists.txt  app_nvs.c
comedouro-gateway/components/app_nvs/include/: app_nvs.h
comedouro-gateway/components/app_pn532/: CMakeLists.txt  app_pn532.c
comedouro-gateway/components/app_pn532_hl/: CMakeLists.txt  app_pn532_hl.c
comedouro-gateway/components/app_spi/: CMakeLists.txt  app_spi.c
comedouro-gateway/components/app_web_server/: CMakeLists.txt  app_web_server.c  html_to_string.py  output.html  output.txt  output_success.txt  web_page.html  web_page_success.html
comedouro-gateway/components/pn532/: CMakeLists.txt  README  pn532.c  pn532.h
comedouro-gateway/components/task_pn532/: CMakeLists.txt  task_pn532.c
comedouro-gateway/components/tasks/: CMakeLists.txt  task_main.c  task_pn532.c  task_state_machine.c
comedouro-gateway/components/user_httpd/: CMakeLists.txt  user_httpd.c
comedouro-gateway/components/user_nvs/: CMakeLists.txt  user_nvs.c
comedouro-gateway/components/user_pn532/: CMakeLists.txt  user_pn532.c
comedouro-gateway/components/user_pwm/: CMakeLists.txt  user_pwm.c
comedouro-gateway/components/user_tasks/: CMakeLists.txt  user_tasks.c
comedouro-gateway/components/user_wifi/: CMakeLists.txt  user_wifi.c
comedouro-gateway/main/: CMakeLists.txt  main.c
comedouro-gateway/main/include/: global_prm.h
comedouro-gateway/webpage/: html_to_string.py
(+16 files in other folders)
